--- a/recipes/koreangroundbeefbowl.html
+++ b/recipes/koreangroundbeefbowl.html
@@ -8,5 +8,42 @@
 </head>
 <body>
     <h1>Korean Ground Beef Bowl</h1>
+    <img src="./images/koreangroundbeefbowl.jpg"></a>
+    <h2>Description</h2>
+    <p>
+        This Korean beef bowl is quick and easy to make. The ingredients
+        can easily be adjusted to suit your taste. Serve over warm rice
+        or spiralized vegetables.
+    </p>
+    <h3>Ingredients</h3>
+    <ul>
+        <li>1 pound lean ground beef</li>
+        <li>5 cloves garlic, crushed</li>
+        <li>1 tablespoon freshly grated ginger</li>
+        <li>2 teaspoons toasted sesame oil</li>
+        <li>1/2 cup reduced sodium soy sauce</li>
+        <li>1/4 teaspoon crushed red pepper</li>
+        <li>6 green onions, chopped, divided</li>
+        <li>4 cups hot cooked brown rice</li>
+        <li>1 tablespoon toasted sesame seeds</li>
+    </ul>
+    <h3>Steps</h3>
+    <ol>
+        <li>
+            Heat a large skillet over medium-high heat. Add beef and
+            cook, stirring and crumbling into small pieces until 
+            browned, 5 to 7 minutes. Drain excess grease.
+        </li>
+        <li>
+            Stir in garlic, ginger, and sesame oil and cook until 
+            fragrant, about 2 minutes. Stir in soy sauce, brown sugar, 
+            and red pepper. Cook until beef absorbs some sauce, about 
+            7 minutes. Add 1/2 of chopped green onions.
+        </li>
+        <li>
+            Serve over hot cooked rice; garnish with sesame seeds and 
+            remaining green onions.
+        </li>
+    </ol>
 </body>
 </html>
