Add link to salmontacoswithmangosalsa.html
Now that I have two links I also refactored the code slightly, so that
all the anchor elements containing links to recipes would be contained
within an unordered list element.

--- a/index.html
+++ b/index.html
@@ -8,6 +8,13 @@
 </head>
 <body>
     <h1>Odin Recipes</h1>
-    <a href="recipes/koreangroundbeefbowl.html">Korean Ground Beef Bowl</a>
+    <ul>
+        <li>
+            <a href="recipes/koreangroundbeefbowl.html">Korean Ground Beef Bowl</a>
+        </li>
+        <li>
+            <a href="recipes/salmontacoswithmangosalsa.html">Salmon Tacos with Mango Salsa</a>
+        </li>
+    </ul>
 </body>
 </html>
