Add link to pastafagioli.html

--- a/index.html
+++ b/index.html
@@ -15,6 +15,9 @@
         <li>
             <a href="recipes/salmontacoswithmangosalsa.html">Salmon Tacos with Mango Salsa</a>
         </li>
+        <li>
+            <a href="recipes/pastafagioli.html">Pasta Fagioli</a>
+        </li>
     </ul>
 </body>
 </html>
