Add link to stylesheet to html docs
I created the relationship between the stylesheet and the various html
documents of this website so that they all receive styling from the
same source.

--- a/recipes/pastafagioli.html
+++ b/recipes/pastafagioli.html
@@ -5,17 +5,18 @@
   <meta http-equiv="X-UA-Compatible" content="IE=edge">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>Pasta Fagioli</title>
+  <link rel="stylesheet" type="text/css" href="../style.css">
 </head>
 <body>
-  <h1>Pasta Fagioli</h1>
+  <h1 class="header">Pasta Fagioli</h1>
   <img src="./images/pastafagioli.jpg"></a>
-  <h2>Description</h2>
+  <h2 class="header">Description</h2>
   <p>
     This easy pasta fagioli recipe is typical Italian hearty 
     winter fare. Serve in bowls with a grating of Parmesan cheese, 
     crusty bread, and salad.
   </p>
-  <h3>Ingredients</h3>
+  <h3 class="header">Ingredients</h3>
   <ul>
     <li>1 tablespoon olive oil</li>
     <li>1 carrot, diced</li>
@@ -30,7 +31,7 @@
     <li>1 1/2 cups ditalini pasta</li>
     <li>1 (15 ounce) can cannellini beans, drained and rinsed</li>
   </ul>
-  <h3>Steps</h3>
+  <h3 class="header">Steps</h3>
   <ol>
     <li>
       Heat olive oil in a saucepan over medium heat. Add carrot, 
