--- a/recipes/salmontacoswithmangosalsa.html
+++ b/recipes/salmontacoswithmangosalsa.html
@@ -5,18 +5,19 @@
   <meta http-equiv="X-UA-Compatible" content="IE=edge">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>Salmon Tacos with Mango Salsa</title>
+  <link rel="stylesheet" type="text/css" href="../style.css">
 </head>
 <body>
-  <h1>Salmon Tacos with Mango Salsa</h1>
+  <h1 class="header">Salmon Tacos with Mango Salsa</h1>
   <img src="./images/salmontacoswithmangosalsa.jpg"></a>
-  <h2>Description</h2>
+  <h2 class="header">Description</h2>
   <p>
     Grilled salmon wrapped up in a small tortilla, topped with 
     peach-mango salsa, shredded cabbage, avocado, and a special 
     sauce.
   </p>
-  <h3>Ingredients</h3>
-  <h4>Mango Salsa</h4>
+  <h3 class="header">Ingredients</h3>
+  <h4 class="header">Mango Salsa</h4>
   <ul>
     <li>3 mangoes, diced</li>
     <li>2 peaches, diced</li>
@@ -25,7 +26,7 @@
     <li>1/2 lime, juiced</li>
     <li>1 bunch cilantro, chopped, divided</li>
   </ul>
-  <h4>Special Sauce</h4>
+  <h4 class="header">Special Sauce</h4>
   <ul>
     <li>1 (8 ounce) container of sour cream</li>
     <li>3 tablespoons mayonnaise</li>
@@ -39,7 +40,7 @@
     <li>3 avocados, sliced</li>
     <li>2 limes, cut into wedges</li>
   </ul>
-  <h3>Steps</h3>
+  <h3 class="header">Steps</h3>
   <ol>
     <li>
       Combine mangoes, peaches, poblano peppers, red onion, juice 
