--- a/recipes/koreangroundbeefbowl.html
+++ b/recipes/koreangroundbeefbowl.html
@@ -5,17 +5,18 @@
   <meta http-equiv="X-UA-Compatible" content="IE=edge">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>Korean Ground Beef Bowl</title>
+  <link rel="stylesheet" type="text/css" href="../style.css">
 </head>
 <body>
-  <h1>Korean Ground Beef Bowl</h1>
+  <h1 class="header">Korean Ground Beef Bowl</h1>
   <img src="./images/koreangroundbeefbowl.jpg"></a>
-  <h2>Description</h2>
+  <h2 class="header">Description</h2>
   <p>
     This Korean beef bowl is quick and easy to make. The ingredients
     can easily be adjusted to suit your taste. Serve over warm rice
     or spiralized vegetables.
   </p>
-  <h3>Ingredients</h3>
+  <h3 class="header">Ingredients</h3>
   <ul>
     <li>1 pound lean ground beef</li>
     <li>5 cloves garlic, crushed</li>
@@ -27,7 +28,7 @@
     <li>4 cups hot cooked brown rice</li>
     <li>1 tablespoon toasted sesame seeds</li>
   </ul>
-  <h3>Steps</h3>
+  <h3 class="header">Steps</h3>
   <ol>
     <li>
       Heat a large skillet over medium-high heat. Add beef and
